Fix CertificatesList action menu items gap

--- a/src/components/certificates-list/styles/index.module.scss
+++ b/src/components/certificates-list/styles/index.module.scss
@@ -39,17 +39,15 @@
       align-items: center;
       overflow: hidden;
       width: 0;
-      gap: var(--pv-size-base-4);
-      > button {
-        &:first-child {
-          margin-right: var(--pv-size-base-2);
-        }
+      gap: var(--pv-size-base-2);
+      .view_details_button {
+        margin-right: var(--pv-size-base-2);
       }
     }
     &:hover .list_table_actions {
-      min-width: 190px;
+      width: fit-content;
       overflow: visible;
-      padding-right: var(--pv-size-base-6);
+      padding-right: var(--pv-size-base-5);
     }
   }
 }
